# nairatax-contracts

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  ai.md
.github/workflows/: ci.yml
contracts/attestation/: Cargo.toml
contracts/attestation/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
scripts/: build.sh  deploy.sh
